; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_vmalloc.c_vfree.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_vmalloc.c_vfree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vfree(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (...) @in_nmi()
  %4 = call i32 @BUG_ON(i32 %3)
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @kmemleak_free(i8* %5)
  %7 = call i32 (...) @in_interrupt()
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @might_sleep_if(i32 %10)
  %12 = load i8*, i8** %2, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %1
  br label %18

15:                                               ; preds = %1
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @__vfree(i8* %16)
  br label %18

18:                                               ; preds = %15, %14
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @in_nmi(...) #1

declare dso_local i32 @kmemleak_free(i8*) #1

declare dso_local i32 @might_sleep_if(i32) #1

declare dso_local i32 @in_interrupt(...) #1

declare dso_local i32 @__vfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
